# XPotencia.ai_Hackaton_MinTIC

./: README.md
Fase_1/: README.md
Fase_2/: README.md
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/: .env.example  README.md  pyproject.toml
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/config/: columns.yml  data_pack.json  datasets.yml  export_contract.json  llm.json  pae_keywords.yml  risk_flags.yml  scoring.yml  validation_sources.json
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/data/cache/: schema_cache.json  traceability_manifest.json
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/data/cache/paco/: paco_pack_manifest.json
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/data/outputs/: pae_audit_cards.json  pae_risk_ranking.json  pae_risk_scores.json  process_diagnostics.json  process_integration_checkpoint.json  process_integration_checkpoint.md
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/data/processed/: pae_search_index.manifest.json
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/data/raw/: pae_additions_sample.manifest.json  pae_contracts_sample.manifest.json
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/scripts/: build_architecture_docs_pdf.py  build_databases_guide_pdf.py  discover_schema.py  download_pae_sample.py
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/src/pae_risk_tracker/: __init__.py  cli.py  config.py  paths.py
Fase_2/capa_1_ingesta_automatizada/pae_risk_tracker/tests/: test_duckdb_store.py  test_loader.py  test_socrata_client.py  test_source_catalog.py  test_validation.py
(+153 files in other folders)
